versioned_docs/version-0.26.0/api/server/interfaces/ServerMessage.md
# Interface: ServerMessage

Defined in: fishjam-proto/dist/index.d.ts:72

Defines any type of message passed between FJ and server peer

## Properties

### authenticated?

> `optional` **authenticated**: `ServerMessage_Authenticated`

Defined in: fishjam-proto/dist/index.d.ts:73

***

### authRequest?

> `optional` **authRequest**: `ServerMessage_AuthRequest`

Defined in: fishjam-proto/dist/index.d.ts:74

***

### channelAdded?

> `optional` **channelAdded**: `ServerMessage_ChannelAdded`

Defined in: fishjam-proto/dist/index.d.ts:89

***

### channelRemoved?

> `optional` **channelRemoved**: `ServerMessage_ChannelRemoved`

Defined in: fishjam-proto/dist/index.d.ts:90

***

### ~~componentCrashed?~~

> `optional` **componentCrashed**: `ServerMessage_ComponentCrashed`

Defined in: fishjam-proto/dist/index.d.ts:109

#### Deprecated

***

### ~~hlsPlayable?~~

> `optional` **hlsPlayable**: `ServerMessage_HlsPlayable`

Defined in: fishjam-proto/dist/index.d.ts:103

#### Deprecated

***

### ~~hlsUploadCrashed?~~

> `optional` **hlsUploadCrashed**: `ServerMessage_HlsUploadCrashed`

Defined in: fishjam-proto/dist/index.d.ts:107

#### Deprecated

***

### ~~hlsUploaded?~~

> `optional` **hlsUploaded**: `ServerMessage_HlsUploaded`

Defined in: fishjam-proto/dist/index.d.ts:105

#### Deprecated

***

### peerAdded?

> `optional` **peerAdded**: `ServerMessage_PeerAdded`

Defined in: fishjam-proto/dist/index.d.ts:87

***

### peerConnected?

> `optional` **peerConnected**: `ServerMessage_PeerConnected`

Defined in: fishjam-proto/dist/index.d.ts:80

***

### peerCrashed?

> `optional` **peerCrashed**: `ServerMessage_PeerCrashed`

Defined in: fishjam-proto/dist/index.d.ts:82

***

### peerDeleted?

> `optional` **peerDeleted**: `ServerMessage_PeerDeleted`

Defined in: fishjam-proto/dist/index.d.ts:88

***

### peerDisconnected?

> `optional` **peerDisconnected**: `ServerMessage_PeerDisconnected`

Defined in: fishjam-proto/dist/index.d.ts:81

***

### peerMetadataUpdated?

> `optional` **peerMetadataUpdated**: `ServerMessage_PeerMetadataUpdated`

Defined in: fishjam-proto/dist/index.d.ts:83

***

### roomCrashed?

> `optional` **roomCrashed**: `ServerMessage_RoomCrashed`

Defined in: fishjam-proto/dist/index.d.ts:79

***

### roomCreated?

> `optional` **roomCreated**: `ServerMessage_RoomCreated`

Defined in: fishjam-proto/dist/index.d.ts:77

***

### roomDeleted?

> `optional` **roomDeleted**: `ServerMessage_RoomDeleted`

Defined in: fishjam-proto/dist/index.d.ts:78

***

### ~~streamConnected?~~

> `optional` **streamConnected**: `ServerMessage_StreamConnected`

Defined in: fishjam-proto/dist/index.d.ts:99

#### Deprecated

***

### ~~streamDisconnected?~~

> `optional` **streamDisconnected**: `ServerMessage_StreamDisconnected`

Defined in: fishjam-proto/dist/index.d.ts:101

#### Deprecated

***

### streamerConnected?

> `optional` **streamerConnected**: `ServerMessage_StreamerConnected`

Defined in: fishjam-proto/dist/index.d.ts:96

***

### streamerDisconnected?

> `optional` **streamerDisconnected**: `ServerMessage_StreamerDisconnected`

Defined in: fishjam-proto/dist/index.d.ts:97

***

### subscribeRequest?

> `optional` **subscribeRequest**: `ServerMessage_SubscribeRequest`

Defined in: fishjam-proto/dist/index.d.ts:75

***

### subscribeResponse?

> `optional` **subscribeResponse**: `ServerMessage_SubscribeResponse`

Defined in: fishjam-proto/dist/index.d.ts:76

***

### trackAdded?

> `optional` **trackAdded**: `ServerMessage_TrackAdded`

Defined in: fishjam-proto/dist/index.d.ts:84

***

### trackForwarding?

> `optional` **trackForwarding**: `ServerMessage_TrackForwarding`

Defined in: fishjam-proto/dist/index.d.ts:91

***

### trackForwardingRemoved?

> `optional` **trackForwardingRemoved**: `ServerMessage_TrackForwardingRemoved`

Defined in: fishjam-proto/dist/index.d.ts:92

***

### trackMetadataUpdated?

> `optional` **trackMetadataUpdated**: `ServerMessage_TrackMetadataUpdated`

Defined in: fishjam-proto/dist/index.d.ts:86

***

### trackRemoved?

> `optional` **trackRemoved**: `ServerMessage_TrackRemoved`

Defined in: fishjam-proto/dist/index.d.ts:85

***

### vadNotification?

> `optional` **vadNotification**: `ServerMessage_VadNotification`

Defined in: fishjam-proto/dist/index.d.ts:93

***

### viewerConnected?

> `optional` **viewerConnected**: `ServerMessage_ViewerConnected`

Defined in: fishjam-proto/dist/index.d.ts:94

***

### viewerDisconnected?

> `optional` **viewerDisconnected**: `ServerMessage_ViewerDisconnected`

Defined in: fishjam-proto/dist/index.d.ts:95
